kubernetes/stage/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chack-events-service-deployment
  labels:
    app: chack-events-service
    name: chack-events-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chack-events-service
  template:
    metadata:
      labels:
        app: chack-events-service
    spec:
      containers:
        - name: chack-events-service
          image: artemowkin/chack-events-service:latest
          ports:
            - containerPort: 8000
              name: web
          command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
