kubernetes/stage/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diffaction-events-service-ingress
  labels:
    app: diffaction-events-service
  annotations:
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
     location /api/v1/events/ws {
      proxysetheader Upgrade $httpupgrade;
      proxyhttpversion 1.1;
      proxysetheader X-Forwarded-Host $httphost;
      proxysetheader X-Forwarded-Proto $scheme;
      proxysetheader X-Forwarded-For $remoteaddr;
      proxysetheader Host $host;
      proxysetheader Connection "upgrade";
      proxycachebypass $httpupgrade;
      }
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - stage.diffaction.com
    secretName: diffaction-tls
  rules:
  - host: stage.diffaction.com
    http:
      paths:
      - path: /api/v1/events
        pathType: Prefix
        backend:
          service:
            name: diffaction-events-service
            port:
              number: 8000
